Fix tv show episodes titles contrast on light mode

--- a/ui/src/Pages/Media/Index.scss
+++ b/ui/src/Pages/Media/Index.scss
@@ -16,7 +16,7 @@
 
       p {
         margin-top: 1em;
-        color: #ccc;
+        color: var(--secondaryTextColor);
         padding: 0 2px;
         font-family: "Roboto Condensed Regular", Arial;
       }
